Fix spacing

--- a/src/styles/Custom.scss
+++ b/src/styles/Custom.scss
@@ -26,7 +26,6 @@ canvas {
   position: relative;
   display: inline-block;
   cursor: pointer;
-  margin: 30px;
 
   &:before {
     position:absolute;
